--- a/assets/stylesheets/layouts/subpage.less
+++ b/assets/stylesheets/layouts/subpage.less
@@ -139,7 +139,7 @@
     }
     
     p.email {
-      font-size: 22px;
+      font-size: 15px;
       font-weight: bold;
       word-wrap: break-word;
       
@@ -153,6 +153,7 @@
 
 @media (min-width: 0px) {
   .subpage-layout {
+    
   }
 }
 
@@ -169,6 +170,10 @@
         float: left;
         margin: 25px 0 0 20px;
       }
+    }
+    
+    .contact-the-team p.email {
+      font-size: 22px;
     }
   }
 }
